--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vue-dragscroll": "^1.8.0",
+    "semantic-ui-vue": "^0.7.0",
+    "semantic-ui-css": "^2.4.1",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.1",
     "v-runtime-template": "^1.5.2",
