--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eriengine",
   "version": "0.0.1",
-  "author": "izure1 <izure@naver.com>",
+  "author": "izure <izure@naver.com>",
   "description": "Web Visualnovel Engine",
   "license": "MIT",
   "main": "./dist/electron/main.js",
@@ -95,7 +95,7 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^4.0.0",
-    "electron-builder": "^20.34.0",
+    "electron-builder": "^20.38.5",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^1.1.11",
