--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "copy": "^0.3.2",
+    "custom-electron-titlebar": "^3.0.0",
     "del": "^3.0.0",
     "directory-tree": "^2.1.0",
     "find-package-json": "^1.1.0",
@@ -75,8 +76,7 @@
     "vue-router": "^3.0.2",
     "vuetify": "^1.4.3",
     "vuex": "^3.1.0",
-    "vuex-electron": "^1.0.3",
-    "custom-electron-titlebar": "^3.0.0"
+    "vuex-electron": "^1.0.3"
   },
   "devDependencies": {
     "ajv": "^6.5.5",
