--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "copy": "^0.3.2",
-    "custom-electron-titlebar": "^3.0.0",
+    "custom-electron-titlebar": "^3.0.3",
     "del": "^3.0.0",
     "directory-tree": "^2.1.0",
     "find-package-json": "^1.1.0",
@@ -69,12 +69,12 @@
     "material-design-icons-iconfont": "^4.0.4",
     "melanke-watchjs": "^1.5.0",
     "trash": "^4.3.0",
-    "v-runtime-template": "^1.5.2",
-    "vue": "^2.5.22",
-    "vue-dragscroll": "^1.8.1",
+    "v-runtime-template": "1.5.2",
+    "vue": "^2.6.6",
+    "vue-dragscroll": "^1.8.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.4.3",
+    "vuetify": "^1.5.1",
     "vuex": "^3.1.0",
     "vuex-electron": "^1.0.3"
   },
@@ -120,11 +120,11 @@
     "sass-loader": "^7.1.0",
     "spectron": "^3.8.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.2",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.6.1",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.22",
+    "vue-loader": "^15.6.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
