--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "directory-tree": "^2.1.0",
     "find-package-json": "^1.1.0",
     "fs-extra": "^7.0.1",
-    "glob": "^7.1.3",
+    "fast-glob": "^2.2.6",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jsplumb": "^2.8.8",
