--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "copy": "^0.3.2",
     "custom-electron-titlebar": "^3.1.0",
     "del": "^5.1.0",
-    "directory-tree": "^2.2.3",
+    "directory-tree": "^2.2.4",
     "find-package-json": "^1.2.0",
     "fs-extra": "^8.1.0",
     "fast-glob": "^3.0.4",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
-    "jsplumb": "^2.11.1",
+    "jsplumb": "^2.11.2",
     "lve": "^3.6.10",
     "material-design-icons-iconfont": "^5.0.1",
     "melanke-watchjs": "^1.5.0",
@@ -74,10 +74,11 @@
     "vue-dragscroll": "^1.10.0",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.7",
-    "vuetify": "^2.0.14",
+    "vuetify": "^2.0.18",
     "vuex": "^3.1.1",
     "vuex-electron": "^1.0.3",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.15",
+    "sql.js": "^1.0.0"
   },
   "devDependencies": {
     "ajv": "^6.5.5",
